--- a/resources/ch02-facebook/viz/force.html
+++ b/resources/ch02-facebook/viz/force.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Force-Directed Layout</title>
-    <script type="text/javascript" src="http://d3js.org/d3.v2.min.js?2.9.3""></script>
+    <script type="text/javascript" src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
     <style>
 
     .link {
